# ofx2csv

./: .gitignore  README.md  pyproject.toml
.github/: test.yaml
.github/workflows/: main.yml
src/ofx2csv/: __init__.py  cli.py  ofx2csv.py
tests/: ofx2csv_test.py
tests/data/: bank.qfx  cc.qfx
